--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -45,10 +45,10 @@
   br
   br
   = f.check_box :coffee_and_tea
-  |  Kaffe og the
+  |  Kaffe og vand
   '&nbsp &nbsp; 
   = f.check_box :bread
-  | Brød
+  | The
   br
   br
   'Andet:
