--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -7,7 +7,7 @@
       .content
         .content-top
 
-
+          =image_tag @user.image.url(:small), :border => 'none', :class => 'image_fix' if @user.image.url
           h1
             = @user.name
           = @user.email
