--- a/app/views/bookings/index.html.slim
+++ b/app/views/bookings/index.html.slim
@@ -46,6 +46,7 @@
             | X
 
       .grid-2
+        ' BØLLE BOB
         = booking.message
 	  .grid-1.edit
         = link_to image_tag('pencil_16.png'), edit_meetingroom_booking_path(booking.meetingroom,booking)
