history and news translation

--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -1,6 +1,6 @@
 .menu-back
   = link_to 'MT04', root_path
-  = link_to 'HISTORY', history_index_path
+  = link_to 'HISTORIE', history_index_path
   = link_to 'VIRKSOMHEDER', companies_path
   - if !user_signed_in?
     = link_to 'LOGIN', user_session_path
