--- a/app/views/shared/_news.html.slim
+++ b/app/views/shared/_news.html.slim
@@ -5,7 +5,7 @@
           .menu-box
             .menu-back
               h2
-                | NEWS
+                | NYHEDER
         - newsposts.each do |newspost|
           .news
             .content
