--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -51,7 +51,7 @@ hr {
 
 .desc{
 	padding-right:14px;
-	background-image:url('../images/arrow_up.png');
+	background-image:url('../../images/arrow_up.png');
 	background-repeat:no-repeat;
 	background-color:transparent;
 	background-position:right top;
@@ -59,7 +59,7 @@ hr {
 
 .asc{
 	padding-right:14px;
-	background-image:url('../images/arrow_down.png');
+	background-image:url('../../images/arrow_down.png');
 	background-repeat:no-repeat;
 	background-color:transparent;
 	background-position:right top;
@@ -84,7 +84,7 @@ a:hover {
 .color_allert{
 	color: #f00;
 }
-
+/*
 .desc{
 	padding-right:14px;
 	background-image:url('arrow_up.png');
@@ -101,3 +101,4 @@ a:hover {
 	background-position:right top;
 }
 
+*/
