--- a/app/views/bookings/new.html.slim
+++ b/app/views/bookings/new.html.slim
@@ -1,14 +1,17 @@
 .grid-container
-
-  .squared-box
+  .bookings-box
     .borders
       .menu-box
         = render :partial => "shared/menu"
       .content
+        h1 Book Mødelokaler
         = render 'form'
 
 
-  .squared-box
+
+
+
+  .calendar-box
     .borders
       div id='calendar'
 
