--- a/app/views/newsposts/show.html.slim
+++ b/app/views/newsposts/show.html.slim
@@ -5,10 +5,10 @@
       .menu-box
         = render :partial => "shared/menu"
       .content
-
+        'dada
         h1
           =raw @newspost.title
-        =raw @newspost.body
+        =raw @newspost.body.html_safe
         br
         br
         - if can?(:edit, @newspost)
