--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -6,26 +6,22 @@
         = render :partial => "shared/menu"
       .content
         .content-top
-
-          h1
-            = t('admin.administration')
-          ul
-            li
-              = link_to t('admin.users'), users_path
-            - if is_super?
-              li
-                = link_to t('admin.illustrations'), illustrations_path
-              li
-                = link_to t('admin.pages'), pages_path
-            li
-              = link_to 'nyheder' , newsposts_path
-            li
-              = link_to 'mødelokaler' , meetingrooms_path
-            li
-              = link_to 'virksomheder' , companies_path
-            li
-              = link_to "reservationer" , bookings_path
-
+          -if can_edit?
+            h1
+              = t('admin.administration')
+            ul
+              li = link_to t('admin.users'), users_path
+              li = link_to 'email alle i huset', "mailto:#{User.all.map(&:email).join(', ')}", :confirm => t('admin.are_you_sure')
+              - if is_super?
+                li = link_to t('admin.illustrations'), illustrations_path
+                li = link_to t('admin.pages'), pages_path
+              li = link_to 'nyheder' , newsposts_path
+              li = link_to 'mødelokaler' , meetingrooms_path
+              li = link_to 'virksomheder' , companies_path
+              li = link_to "reservationer" , bookings_path
+              li = link_to "sider" , info_pages_path
+          -else
+            'no access
   .squared-box
     .borders.fixed-height
       = image_tag 'frontpage-house.jpg', :border => 'none', :class => 'image_fix'
