--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -526,6 +526,98 @@ footer, header, hgroup, menu, nav, section {
 }
 
 /* line 236, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+  min-height: 376px;
+  display: block;
+}
+/* line 242, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  min-height: 376px;
+  display: block;
+}
+/* line 249, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .content .content-top {
+  height: 280px;
+}
+/* line 251, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .text-right {
+  text-align: right;
+}
+/* line 254, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 257, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .menu-box a {
+  color: #fff;
+}
+/* line 258, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+/* line 260, ../../../app/assets/stylesheets/grid.scss */
+.bookings-box .image-box {
+  height: 376px;
+}
+
+/* line 265, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box {
+  background-color: #fff;
+  margin-top: 10px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+  min-height: 376px;
+  display: block;
+}
+/* line 271, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  min-height: 376px;
+  display: block;
+}
+/* line 278, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .content .content-top {
+  height: 280px;
+}
+/* line 280, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .text-right {
+  text-align: right;
+}
+/* line 283, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 286, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .menu-box a {
+  color: #fff;
+}
+/* line 287, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+/* line 289, ../../../app/assets/stylesheets/grid.scss */
+.calendar-box .image-box {
+  height: 376px;
+}
+
+/* line 294, ../../../app/assets/stylesheets/grid.scss */
 .squared-box {
   background-color: #fff;
   margin-top: 36px;
@@ -537,46 +629,46 @@ footer, header, hgroup, menu, nav, section {
   min-height: 376px;
   display: block;
 }
-/* line 242, ../../../app/assets/stylesheets/grid.scss */
+/* line 300, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 249, ../../../app/assets/stylesheets/grid.scss */
+/* line 307, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .content .content-top {
   height: 280px;
 }
-/* line 251, ../../../app/assets/stylesheets/grid.scss */
+/* line 309, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .text-right {
   text-align: right;
 }
-/* line 254, ../../../app/assets/stylesheets/grid.scss */
+/* line 312, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 257, ../../../app/assets/stylesheets/grid.scss */
+/* line 315, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a {
   color: #fff;
 }
-/* line 258, ../../../app/assets/stylesheets/grid.scss */
+/* line 316, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 260, ../../../app/assets/stylesheets/grid.scss */
+/* line 318, ../../../app/assets/stylesheets/grid.scss */
 .squared-box .image-box {
   height: 376px;
 }
 
-/* line 265, ../../../app/assets/stylesheets/grid.scss */
+/* line 323, ../../../app/assets/stylesheets/grid.scss */
 .fixed-height {
   height: 376px;
 }
 
-/* line 269, ../../../app/assets/stylesheets/grid.scss */
+/* line 327, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box {
   display: inline;
   float: left;
@@ -589,13 +681,13 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   display: block;
 }
-/* line 277, ../../../app/assets/stylesheets/grid.scss */
+/* line 335, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 283, ../../../app/assets/stylesheets/grid.scss */
+/* line 341, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -606,21 +698,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 290, ../../../app/assets/stylesheets/grid.scss */
+/* line 348, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 293, ../../../app/assets/stylesheets/grid.scss */
+/* line 351, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 294, ../../../app/assets/stylesheets/grid.scss */
+/* line 352, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 297, ../../../app/assets/stylesheets/grid.scss */
+/* line 355, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -631,12 +723,12 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 306, ../../../app/assets/stylesheets/grid.scss */
+/* line 364, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 310, ../../../app/assets/stylesheets/grid.scss */
+/* line 368, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -646,7 +738,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 315, ../../../app/assets/stylesheets/grid.scss */
+/* line 373, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -660,50 +752,50 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 324, ../../../app/assets/stylesheets/grid.scss */
+/* line 382, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   font-weight: bold;
-  color: #444;
+  color: #448;
 }
-/* line 328, ../../../app/assets/stylesheets/grid.scss */
+/* line 386, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 332, ../../../app/assets/stylesheets/grid.scss */
+/* line 390, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 337, ../../../app/assets/stylesheets/grid.scss */
+/* line 395, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 340, ../../../app/assets/stylesheets/grid.scss */
+/* line 398, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 346, ../../../app/assets/stylesheets/grid.scss */
+/* line 404, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 350, ../../../app/assets/stylesheets/grid.scss */
+/* line 408, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 352, ../../../app/assets/stylesheets/grid.scss */
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 357, ../../../app/assets/stylesheets/grid.scss */
+/* line 415, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -713,7 +805,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 362, ../../../app/assets/stylesheets/grid.scss */
+/* line 420, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -724,19 +816,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 369, ../../../app/assets/stylesheets/grid.scss */
+/* line 427, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 374, ../../../app/assets/stylesheets/grid.scss */
+/* line 432, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 379, ../../../app/assets/stylesheets/grid.scss */
+/* line 437, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -747,29 +839,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 384, ../../../app/assets/stylesheets/grid.scss */
+/* line 442, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 390, ../../../app/assets/stylesheets/grid.scss */
+/* line 448, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 393, ../../../app/assets/stylesheets/grid.scss */
+/* line 451, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 394, ../../../app/assets/stylesheets/grid.scss */
+/* line 452, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 398, ../../../app/assets/stylesheets/grid.scss */
+/* line 456, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -782,16 +874,16 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 406, ../../../app/assets/stylesheets/grid.scss */
+/* line 464, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 413, ../../../app/assets/stylesheets/grid.scss */
+/* line 471, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
-  width: 180px;
+  width: 110px;
   height: 60px;
   display: inline;
   float: left;
@@ -799,7 +891,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 422, ../../../app/assets/stylesheets/grid.scss */
+/* line 480, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -810,7 +902,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 433, ../../../app/assets/stylesheets/grid.scss */
+/* line 491, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -819,7 +911,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 437, ../../../app/assets/stylesheets/grid.scss */
+/* line 495, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -834,7 +926,7 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 450, ../../../app/assets/stylesheets/grid.scss */
+/* line 508, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
@@ -844,7 +936,7 @@ a:hover {
   height: 40px;
 }
 
-/* line 460, ../../../app/assets/stylesheets/grid.scss */
+/* line 518, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -855,21 +947,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 466, ../../../app/assets/stylesheets/grid.scss */
+/* line 524, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 533, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 481, ../../../app/assets/stylesheets/grid.scss */
+/* line 539, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -879,7 +971,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 485, ../../../app/assets/stylesheets/grid.scss */
+/* line 543, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -888,7 +980,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 489, ../../../app/assets/stylesheets/grid.scss */
+/* line 547, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -896,7 +988,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 492, ../../../app/assets/stylesheets/grid.scss */
+/* line 550, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -904,7 +996,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 495, ../../../app/assets/stylesheets/grid.scss */
+/* line 553, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -912,7 +1004,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 498, ../../../app/assets/stylesheets/grid.scss */
+/* line 556, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -923,14 +1015,14 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 505, ../../../app/assets/stylesheets/grid.scss */
+/* line 563, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 511, ../../../app/assets/stylesheets/grid.scss */
+/* line 569, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
