--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,11 +4,13 @@ html
     title Marselis Tværvej 4
 
     = stylesheet_link_tag 'compiled/grid.css', 'compiled/text.css', 'compiled/main.css', :media => 'screen, projection'
+    = stylesheet_link_tag "galleriffic-3", 'gallery'
     = stylesheet_link_tag "fullcalendar"
     = stylesheet_link_tag "fullcalendar.print", :media => 'print'
     = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7/themes/redmond/jquery-ui.css"
     = javascript_include_tag 'jquery.tools.min.js', 'rails', 'application', 'jquery.rest.js', 'fullcalendar.js', 'calendar.js'
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"
+    = javascript_include_tag "jquery.galleriffic",'jquery.history','jush','jquery.opacityrollover'
     = csrf_meta_tag
     = include_tiny_mce_if_needed
     javascript:
