--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,9 +2,11 @@ doctype html
 html
   head
     title Marselis Tværvej 4
+    meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"
 
     = stylesheet_link_tag 'compiled/grid.css', 'compiled/text.css', 'compiled/main.css', :media => 'screen, projection'
-    = stylesheet_link_tag "galleriffic-3", 'gallery'
+    -#= stylesheet_link_tag "galleriffic-3", 'gallery'
+    = stylesheet_link_tag 'gallery'
     = stylesheet_link_tag "fullcalendar"
     = stylesheet_link_tag "fullcalendar.print", :media => 'print'
     = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7/themes/redmond/jquery-ui.css"
