--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,19 +1,16 @@
 .grid-container
 
   .squared-box
-    .borders.fixed-height
+    .borders
       .menu-box
         = render :partial => "shared/menu"
       .content
-        .content-top
-
-
-          h1
-            =raw @welcome.title
-          =raw @welcome.body      
-	      - if can?(:edit, @welcome)
-	        .text-right
-	          = link_to t('admin.edit'), edit_page_path(@welcome), :class => 'button'
+        h1
+          =raw @welcome.title
+        =raw @welcome.body      
+	    - if can?(:edit, @welcome)
+	      .text-right
+	        = link_to t('admin.edit'), edit_page_path(@welcome), :class => 'button'
 		
         = link_to 'FIND OS PÅ KORT', googlemap_index_path
 
