--- a/public/stylesheets/galleriffic-3.css
+++ b/public/stylesheets/galleriffic-3.css
@@ -1,15 +1,17 @@
-div.content {
+
+div.gallery_content {
 	/* The display of content is enabled using jQuery so that the slideshow content won't display unless javascript is enabled. */
-	display: none;
+	display: none;*/
 	float: right;
-	width: 574px; 
+	width: 540px; 
 }
-div.content a, div.navigation a {
+div.gallery_content a, div.navigation a {
 	text-decoration: none;
 	color: #777;
 }
-div.content a:focus, div.content a:hover, div.content a:active {
+div.gallery_content a:focus, div.content a:hover, div.content a:active {
 	text-decoration: underline;
+	background-color:#fff;
 }
 div.controls {
 	margin-top: 5px;
@@ -52,17 +54,18 @@ div.slideshow span.image-wrapper {
 }
 div.slideshow a.advance-link {
 	display: block;
-	width: 550px;
-	height: 502px; /* This should be set to be at least the height of the largest image in the slideshow */
-	line-height: 502px; /* This should be set to be at least the height of the largest image in the slideshow */
-	text-align: center;
+	width: 548px;
+	height: 408px; /* This should be set to be at least the height of the largest image in the slideshow */
+	line-height: 408px; /* This should be set to be at least the height of the largest image in the slideshow */
+/*	text-align: center;*/
 }
 div.slideshow a.advance-link:hover, div.slideshow a.advance-link:active, div.slideshow a.advance-link:visited {
 	text-decoration: none;
+	background-color:#fff;
 }
 div.slideshow img {
-	vertical-align: middle;
-	border: 1px solid #ccc;
+/*	vertical-align: middle;*/
+	border: 1px solid #333;
 }
 div.download {
 	float: right;
@@ -91,6 +94,7 @@ div.image-desc {
 	padding-top: 12px;
 }
 div.navigation {
+	margin-left:10px;
 	/* The navigation style is set using jQuery so that the javascript specific styles won't be applied unless javascript is enabled. */
 }
 ul.thumbs {
@@ -123,8 +127,11 @@ div.galery_pagination {
 	clear: both;
 }
 div.navigation div.top {
+	/*
 	margin-bottom: 12px;
 	height: 11px;
+	*/
+	height: 6px;
 }
 div.navigation div.bottom {
 	margin-top: 12px;
@@ -150,3 +157,4 @@ div.galery_pagination span.ellipsis {
 	border: none;
 	padding: 5px 0 3px 2px;
 }
+
