--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -1026,3 +1026,95 @@ a:hover {
 .top_margin {
   margin-top: 8px;
 }
+
+/* line 571, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 380px;
+  min-height: 376px;
+  display: block;
+}
+/* line 577, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  min-height: 376px;
+  display: block;
+}
+/* line 584, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .content .content-top {
+  height: 280px;
+}
+/* line 586, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .text-right {
+  text-align: right;
+}
+/* line 589, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 592, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .menu-box a {
+  color: #fff;
+}
+/* line 593, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+/* line 595, ../../../app/assets/stylesheets/grid.scss */
+.thumb-box .image-box {
+  height: 376px;
+}
+
+/* line 600, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box {
+  background-color: #fff;
+  margin-top: 36px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 540px;
+  min-height: 376px;
+  display: block;
+}
+/* line 606, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .borders {
+  border-style: solid;
+  border-width: 1px;
+  min-height: 376px;
+  display: block;
+}
+/* line 613, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .content .content-top {
+  height: 280px;
+}
+/* line 615, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .text-right {
+  text-align: right;
+}
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .menu-box {
+  width: 400px;
+  height: 51px;
+}
+/* line 621, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .menu-box a {
+  color: #fff;
+}
+/* line 622, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .menu-box a:hover {
+  color: #000;
+  background-color: #fff;
+}
+/* line 624, ../../../app/assets/stylesheets/grid.scss */
+.gallery-box .image-box {
+  height: 376px;
+}
