fixed js bug from previous commit

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
     = stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7/themes/redmond/jquery-ui.css"
     = javascript_include_tag 'jquery.tools.min.js', 'rails', 'application', 'jquery.rest.js', 'fullcalendar.js', 'calendar.js'
     = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"
-    = javascript_include_tag "jquery","jquery.galleriffic",'jquery.history','jush','jquery.opacityrollover'
+    = javascript_include_tag "jquery.galleriffic",'jquery.history','jush','jquery.opacityrollover'
     = csrf_meta_tag
     = include_tiny_mce_if_needed
     javascript:
