--- a/app/views/newsposts/crop.html.slim
+++ b/app/views/newsposts/crop.html.slim
@@ -7,7 +7,7 @@
         onChange: update_crop,
         onSelect: update_crop,
         setSelect: [0, 0, 754, 616],
-        bgColor:    'none',
+        //bgColor:    'none',
         aspectRatio: 1.223404255319149
       });
     });
