gallery on frontpage

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -84,6 +84,17 @@ a:hover {
 .color_allert{
 	color: #f00;
 }
+
+.thumbs-box{
+	margin-left:10px;
+}
+
+.photo-thumb{
+	margin:2px;
+	width:60px;
+	display:block;
+	
+}
 /*
 .desc{
 	padding-right:14px;
