--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -13,6 +13,13 @@
 	        = link_to t('admin.edit'), edit_page_path(@welcome), :class => 'button'
 		
         = link_to 'FIND OS PÅ KORT', googlemap_index_path
+        br
+        'galleri
+        br
+        -@photos.all.each do |photo|
+          '&nbsp;
+          = link_to image_tag(photo.image.url(:micro)), gallery_index_path
+
 
   .squared-box
     .borders.fixed-height
