save button on info_page _form

--- a/app/views/info_pages/_form.html.slim
+++ b/app/views/info_pages/_form.html.slim
@@ -17,5 +17,7 @@
       = t('system.body')
       br/
       = f.text_area :body, :class => "mceEditor"
+    br
+    = f.submit 'Gem', :disable_with =>  'Saving...'
     
    
