--- a/app/views/info_pages/edit.html.erb
+++ b/app/views/info_pages/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing info_page</h1>
+<div class="grid-12">
+ <h1>Rediger side</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @info_page %> |
-<%= link_to 'Back', info_pages_path %>
+
