--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -33,4 +33,4 @@
           =raw @link
 
 
-= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
+-#= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
