--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -19,8 +19,8 @@
 
 
 	    
-  .squared-box.fixed-height
-    .borders
+  .squared-box
+    .borders.fixed-height
       div style="width:458px; height:376px; overflow:hidden"
         = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
       .tlf-box
